2008-11-08  Badlop  <badlop@process-one.net>

	* src/mod_webpresence.erl (escape): Escape also newlines (thanks
	to Florian Zeitz)

2008-09-10  Badlop  <badlop@process-one.net>

	* src/mod_webpresence.erl (get_presences): Return only sessions
	that have presence

2008-07-29  Badlop  <badlop@process-one.net>

	* src/mod_webpresence.erl: Fix calls to supervisor:terminate_child
	and ejabberd_hooks:delete

2008-07-25  Badlop  <badlop@process-one.net>

	* src/mod_webpresence.erl: Changed the syntax of image request
	with custom theme: the URI must contain the word "theme" before
	the theme name.  Allow to request image and avatar providing an
	additional element in the URI, which is interesting for some
	restrictive public forums.  Changed category and type in disco
	queries.  Fix iconset verification.
	* README.txt: Likewise

2008-01-29  Badlop  <badlop@process-one.net>

	* src/mod_webpresence.erl: Support 'cb' parameter in js requests,
	which is later added in the result as a callback (thanks to Eric
	Sessoms)
	* README.txt: Likewise

2007-12-26  Badlop  <badlop@process-one.net>

	* src/mod_webpresence.erl: Translate menu items of webadmin hooks
	in each module (EJAB-485)

2007-09-22  Badlop  <badlop@ono.com>

	* src/mod_webpresence.erl: Added new ACCESS for automatic
	enable. Added image.php URL, useful in some cases.

	* README.txt: Added usage description.

	* TODO.txt: Added feature requests proposed by Pablo Saratxaga.

	* msgs/wa.msg: Added Walloon translation (thanks to Pablo
	Saratxaga).

	* src/mod_webpresence.erl: Better i18n support (thanks to Pablo
	Saratxaga).

2007-09-21  Badlop  <badlop@ono.com>

	* src/mod_webpresence.erl: Better i18n support.

2007-08-31  Badlop  <badlop@ono.com>

	* src/mod_webpresence.erl: Escape ' in status message. Fix bug
	while cheking jidurl and ridurl options. Small fix in PHP example.

2007-08-30  Badlop  <badlop@ono.com>

	* src/mod_webpresence.erl: Support for JavaScript output. Request