@@ -1,0 +1,31 @@
+{"available","disponible"}.
+{"Avatar","Avatar"}.
+{"away","ausente"}.
+{"do not disturb","no molestar"}.
+{"Example:","Ejemplo:"}.
+{"extended away","muy ausente"}.
+{"free for chat","disponible para charlar"}.
+{"Icon Theme","Tema de iconos"}.
+{"If you forget your RandomID, register again to receive this message.","Si olvidas tu ID Aleatorio, regístrate de nuevo para recibir este mensaje."}.
+{"JavaScript","JavaScript"}.
+{"Login with a Jabber client, open the Service Discovery and register in Web Presence.","Conecta con un cliente Jabber, abre el Descubridor de Servicios y regístrate de Web Presence."}.
+{"Output Type","Tipo de salida"}.
+{"Random ID","ID Aleatorio"}.
+{"registered","registrado"}.
+{"Resource","Recurso"}.
+{"Select one at least","Selecciona al menos una"}.
+{"Text","Texto"}.
+{"To get a new RandomID, disable the option and register again.","Para obtener un nuevo ID Aleatorio, desactiva esta opción y regístrate de nuevo."}.
+{"To publish your presence using this system you need a Jabber account in this Jabber server.","Para publicar tu presencia usando este sistema necesitas una cuenta Jabber en este servidor."}.
+{"unavailable","desconectado"}.
+{"unregistered","desregistrado"}.
+{"URL Type","Tipo de URL"}.
+{"Use URLs like:","Usar URLs como:"}.
+{"Web Presence: ","Presencia Web:"}.
+{"Web Presence","Web Presence"}.
+{"What features do you want to enable?","¿Qué características deseas activar?"}.
+{"XML","XML"}.
+{"You have registered: ","Te has registrado:"}.
+{"You have unregistered.","Te has desregistrado."}.
+{"You need an x:data capable client to register presence","Necesitas un cliente que incluya soporte de x:data para poder registrar tu presencia"}.
+{"You will receive a message with further instructions.","Recibirás un mensaje con instrucciones adicionales."}.
