@@ -1,0 +1,31 @@
+{"available","disponibe"}.
+{"Avatar","Vizaedje"}.
+{"away","evoye"}.
+{"do not disturb","èn nén disrindjî"}.
+{"Example:","Egzimpe:"}.
+{"extended away","nén arinnåve"}.
+{"free for chat","libe po berdeler"}.
+{"Icon Theme","Tinme po ls imådjetes"}.
+{"If you forget your RandomID, register again to receive this message.","Si vos rovyîz vossse ID a l' astcheyance, redjîstrez vs cor on côp po rçure ci messaedje ci."}.
+{"JavaScript","JavaScript"}.
+{"Login with a Jabber client, open the Service Discovery and register in Web Presence.","Elodjîz vs avou on cliyint Jabber et s' drovoz li «Discovraedje di siervices» eyet edjîstrez vs sol «Prezince sol waibe»"}.
+{"Output Type","Sôre di rexhowe"}.
+{"Random ID","ID a l' astcheyance"}.
+{"registered","edjîstré"}.
+{"Resource","Rissoûce"}.
+{"Select one at least","Tchoezixhoz è pol moens ene"}.
+{"Text","Tecse"}.
+{"To get a new RandomID, disable the option and register again.","Po rçure on novea ID a l' astcheyance, dismetoz l' tchuze ey après redjîstrez vs cor on côp."}.
+{"To publish your presence using this system you need a Jabber account in this Jabber server.","Por vos eplaidî vosse prezince so cisse waibe ci i vs fåt on conte Jabber so ç' sierveu ci."}.
+{"unavailable","nén disponibe"}.
+{"unregistered","disdjîstré"}.
+{"URL Type","Sôre di hårdêye"}.
+{"Use URLs like:","Eployîz des hårdêyes come:"}.
+{"Web Presence: ","Prezince sol waibe: "}.
+{"Web Presence","Prezince sol waibe"}.
+{"What features do you want to enable?","Kénès fonccionålités voloz vs mete en alaedje?"}.
+{"XML","XML"}.
+{"You have registered: ","Vos avoz edjîstré: "}.
+{"You have unregistered.","Vos vs avoz disdjîstré."}.
+{"You need an x:data capable client to register presence","Vos avoz mezåjhe d' on cliyint ki sopoite x:data po vs edjîstrer al prezince sol waibe"}.
+{"You will receive a message with further instructions.","Vos riçuroz on messaedje avou pus d' instruccions."}.
